Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32897

a11y: Qt Creator's editor is no longer screen reader accessible

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • None
    • Qt Creator 18.0 (master branch)
    • Editors
    • None
    • Debian testing, Qt Creator self-compiled from git master as of commit 67b260b4fbd41829359683b52a3cc7e8d6eb5d8c
    • Linux/Wayland, Linux/X11
    • 524d653ce (17.0)

    Description

      Unlike with earlier versions of Qt Creator, the editor is no longer screen reader accessible in the current development version of Qt Creator.

      Steps to reproduce:

      1) start the Orca screen reader

      2) start Qt Creator, open any file for editing

      3) move the cursor around in the file using the arrow keys

      Actual result:

      Orca doesn't announce the text to which the cursor moved (e.g. the line when moving to a different line using the up/down arrow key).

      Expected result:

      Orca should announce the text to which the cursor moved.

       

      Further information:

      1) This is a regression. Doing a local revert of

       

      commit dd9681b0e9b5366c2e785d25bd3953c681849621
      Author: David Schulz
      Date:   Wed Feb 26 13:01:29 2025 +0100

         Editor: use forked plaintextedit

      makes the announcement work again.

      I suspect that if Qt Creator wants to use/maintain its own fork of QPlainTextEdit, it would also have to copy over and maintain the corresponding accessibility implementations from qtbase, too.

      2) Crashes due to QTBUG-136074 may be encountered while testing, but that is a separate issue that most likely needs to be fixed inside qtbase.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-32897
        # Subject Branch Project Status CR V

        Activity

          People

            davschul David Schulz
            michaelweghorn Michael Weghorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes