Utils: Ensure PlainTextEdit accessibility

Fixes: QTCREATORBUG-32897
Change-Id: I2d15470f4c81f179b9ac29977bb45bbf7f8f0219
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>